Update pom.xml, README.md